<resources>
    <!-- Titles -->
    <string name="app_name" translatable="false">Homing Compass</string>
    <string name="app_version" translatable="false">Version 2.3.1</string>

    <string name="title_activity_maps">Where do you live?</string>
    <string name="title_dialog_format">Unit system</string>
    <string name="title_dialog_help">Help</string>
    <string name="title_my_locations">My Locations</string>

    <string name="menu_about" translatable="false">About</string>

    <!-- Keys -->
    <string name="key_widget_needle_resource" translatable="false">widget_needle_rotated_</string>
    <string name="key_widget_needle_resource_group" translatable="false">drawable</string>
    <string name="key_widget_distance" translatable="false">kljasdklfjansdfsd</string>
    <string name="key_widget_rotation" translatable="false">vamkdjmfgkadfmgdf</string>
    <string name="key_widget_settings_visible" translatable="false">vaofpoajifvopaijv</string>

    <string name="key_permission_start_service" translatable="false">adfnviadfnvidfgdf</string>

    <string name="key_intent_latitude" translatable="false">latitude</string>
    <string name="key_intent_longitude" translatable="false">longitude</string>
    <string name="key_intent_marker_title" translatable="false">marker_title</string>
    <string name="key_intent_marker_snippet" translatable="false">marker_snippet</string>
    <string name="key_intent_location_id" translatable="false">id</string>
    <string name="key_intent_show_settings_button" translatable="false">show_settings_button</string>

    <!-- Shared Preference -->
    <string name="shared_pref_file" translatable="false">settings_database</string>
    <string name="shared_pref_my_locations_file" translatable="false">my_locations_database</string>

    <string name="shared_pref_home_latitude" translatable="false">home_latitude</string>
    <string name="shared_pref_home_longitude" translatable="false">home_longitude</string>

    <string name="shared_pref_last_latitude" translatable="false">last_latitude</string>
    <string name="shared_pref_last_longitude" translatable="false">last_longitude</string>
    <string name="shared_pref_last_altitude" translatable="false">last_altitude</string>
    <string name="shared_pref_last_distance" translatable="false">last_distance</string>


    <string name="shared_pref_setting_widget_update_duration" translatable="false">widget_update_duration</string>
    <string name="shared_pref_setting_about_rating" translatable="false">about_rating</string>
    <string name="shared_pref_setting_show_distance" translatable="false">show_distance</string>
    <string name="shared_pref_setting_show_settings_button" translatable="false">show_settings_button</string>
    <string name="shared_pref_setting_format" translatable="false">shared_pref_format</string>
    <string name="shared_pref_setting_constant_location_updates" translatable="false">shared_pref_constant_location_updates</string>

    <string name="shared_pref_flag_app_opened_previously" translatable="false">shared_pref_app_opened_previously</string>
    <string name="shared_pref_flag_notice_dismissed" translatable="false">notice_dismissed</string>

    <string name="shared_pref_widget_location" translatable="false">widget_location</string>

    <!-- Formats -->
    <string name="format_kilometer" translatable="false">" km"</string>
    <string name="format_meter" translatable="false">" m"</string>

    <string name="format_miles" translatable="false">" mi"</string>
    <string name="format_feet" translatable="false">" ft"</string>

    <!-- Normal texts -->
    <string name="about_icon_attribution">Icon made by <a href="http://www.freepik.com">Freepik</a> from <a href="http://www.flaticon.com">www.flaticon.com</a></string>
    <string name="about_feedback">Feedback / Bug Report</string>
    <string-array name="about_feedback_emails" translatable="false">
        <item translatable="false">ciriousjoker@gmail.com</item>
    </string-array>
    <string name="about_feedback_subject" translatable="false">[HomingCompass]</string>
    <string name="about_license_notice">Licensed under the <a href="https://opensource.org/licenses/MIT">MIT license</a></string>
    <string name="about_signature_name" translatable="false">Philipp Bauer ©2016</string>
    <string name="about_signature" translatable="false">Created by</string>
    <string name="about_easter_egg" translatable="false">Viel Spaß, Nina ;)</string>

    <string name="settings_widget_update_duration">Widget update duration</string>
    <string name="settings_item_which_location">Used location</string>
    <string name="settings_switch_show_distance">Show distance</string>
    <string name="settings_switch_show_settings_button">Show settings button in the widget</string>

    <string name="settings_switch_update_location_constantly">Updating location constantly</string>
    <string name="settings_switch_update_location_once">Updating location constantly</string>
    <string name="settings_switch_update_location_constantly_caption">Turn this off to save battery</string>
    <string-array name="settings_format_options">
        <item>Meter / Kilometer</item>
        <item>Feet / Miles</item>
    </string-array>

    <string name="intro_step_1">Set a location</string>
    <string name="intro_step_2">Add the widget</string>
    <string name="intro_step_3">Tap on the widget</string>
    <string name="intro_step_4">Success!</string>
    <string name="intro_button">Got it!</string>

    <string name="maps_marker_home_title">Home</string>
    <string name="maps_marker_home_snippet">You live here</string>

    <string name="my_locations_header_hint">Add location</string>
    <string name="my_locations_item_hint">Enter a name</string>

    <!-- Buttons -->
    <string name="button_open_settings">Settings</string>
    <string name="button_add_location">Add</string>

    <!-- User notices -->
    <string name="notice_no_widget">You have no widget, don\'t forget to add one!</string>
    <string name="notice_too_many_widget">You have %1$s widgets on your home screen(s).</string>
    <string name="notice_map_preview_hint">Tap on the map to set a location.</string>
    <string name="notice_map_hint">Long tap on the map to set a location.</string>
    <string name="notice_no_location_set">Please set a location in the settings first.</string>
    <string name="notice_no_permission">The app won\'t work without this permission.</string>
    <string name="notice_location_first_time">Searching for a location for the first time might take some time, please be patient.</string>
    <string name="notice_gps_deactivated">Please activate gps, battery saving mode is not sufficient.</string>
    <string name="notice_saved">Saved</string>
    <string name="notice_general_error">Something went wrong, sorry.</string>
    <string name="notice_no_name_set">Please enter a name</string>
    <string name="notice_confirmation_delete_location">Are you sure that you want to delete this location?</string>
    <string name="button_remove">Remove</string>

    <!-- Info dialogs -->
    <string-array name="settings_info_dialog">
        <item>Here you can switch between all your locations.\n\nYou can set new locations by tapping on the little star in the upper-left corner of the map.</item>
        <item>Here you can specify, how long the widget should keep on spinning.\n\nNotice that the longer you set this value, the longer it\'ll drain battery.</item>
        <item>Here you can set if you want the distance to be displayed in the upper-left corner of the widget.</item>
        <item>Here you can choose if you want to use the metric or the imperial system.</item>
        <item>Here you can set if you want the little cog to be displayed in the upper-right corner of the widget.</item>
        <item>OFF:\nThe location will be searched once at the beginning when you tap on the widget and not be updated as long as it\'s running.\n\nON:\nThe location will be retrieved for as long as the widget is running.\n\n\nNote that you should only turn this on if you are relatively close to your destination or you\'re constantly moving.</item>
    </string-array>
</resources>
