<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:clipChildren="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settings_CardView_Layout"
            android:animateLayoutChanges="true"
            android:clipToPadding="false"
            android:orientation="vertical">

            <!--
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/container"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="8dp"
                android:background="#fff">
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_widget_update_duration"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorBlack54"
                    android:id="@+id/textView_SeekBarDescription"
                    android:text="" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar_widget_duration"
                    android:indeterminate="false"
                    android:max="9"
                    android:progress="5" />
            </LinearLayout>


            <View style="@style/Divider"/>


            <Switch
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_switch_show_distance"
                android:id="@+id/switch_ShowDistance"
                android:checked="true" />





            <View style="@style/Divider"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/textView_Format">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/title_dialog_format"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack54"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/textView_FormatDescription"
                    android:text="" />
            </LinearLayout>
            <View style="@style/Divider" android:id="@+id/divider_after_unit_system"/>



            <Switch
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="?attr/selectableItemBackground"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/settings_switch_show_settings_button"
                android:id="@+id/switch_ShowSettingsButton" />

            <View style="@style/Divider"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="0dp"
                android:id="@+id/switch_UpdateLocationConstantly_Clickable">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:id="@+id/textView_UpdateLocationConstantly"
                        android:text="@string/settings_switch_update_location_constantly" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorBlack54"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/settings_switch_update_location_constantly_caption" />
                </LinearLayout>

                <Switch
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/switch_UpdateLocationConstantly" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
